[Anil] fixed see all stories spacing issues and alignment and also fixed ajax loading placement issue

--- a/vikalp/static/css/_category_page.css.scss
+++ b/vikalp/static/css/_category_page.css.scss
@@ -62,7 +62,7 @@
 }
 
 .category-page-category-list-wrapper {
-  margin: 10px 0px;
+  margin: 10px 0px 0px 0px;
 }
 
 .category-topping-wrapper {
